Wed Oct  6 11:35:48 2004  Chad Elliott  <elliott_c@ociweb.com>

        * clone_build_tree.pl:

          Added a description of what this script does to the usage.

        * modules/GHSProjectCreator.pm:
        * modules/GHSWorkspaceCreator.pm:
        * templates/ghs.mpd:
        * templates/ghscommon.mpt:
        * templates/ghsdll.mpt:
        * templates/ghsdllexe.mpt:
        * templates/ghslib.mpt:
        * templates/ghslibexe.mpt:

          Increased the support for Green Hills Builder.  It still isn't
          complete as I have only tested it for Integrity.  I will need to
          test it for different platforms such as Solaris and Windows.

          Due to the way that the builder works, the -hierarchy option does
          not work and will never work with the ghs project type.

Tue Oct  5 10:21:20 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/VC71ProjectCreator.pm:
        * modules/VC7ProjectCreator.pm:
        * modules/VC8ProjectCreator.pm:
        * templates/vc7.mpd:

          For vc7 and vc71, set the ForceConformanceInForLoopScope to TRUE.
          For vc8, that setting is deprecated so we do not set it at all.

Tue Oct  5 08:53:10 2004  Chad Elliott  <elliott_c@ociweb.com>

        * config/rpc.mpb:

        * modules/ProjectCreator.pm:

          Fixed a bug where a generated file (on Windows only) would not be
          recognized as already added to the list of files.

        * README:
        * modules/TemplateParser.pm:
        * templates/automake.mpd:
        * templates/bmake.mpd:
        * templates/em3vcp.mpd:
        * templates/make.mpd:
        * templates/nmake.mpd:
        * templates/vc6dsp.mpd:
        * templates/vc7.mpd:
        * templates/vc7csharp.mpd:
        * templates/vc7vb.mpd:

          Added the ability to add to 'postcommand' within the scope of a
          custom section (such as IDL_Files, RPC_Files, etc.)  In the
          process of doing this, I fixed a couple of bugs in